--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18",
+    "react-spring": "^9.7.3",
+    "spring": "^0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
