--- a/package.json
+++ b/package.json
@@ -11,20 +11,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react95/icons": "^2.1.1",
     "cors": "^2.8.5",
+    "css-loader": "^6.10.0",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "next": "14.1.0",
+    "next": "^14.1.0",
+    "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-spring": "^9.7.3",
-    "spring": "^0.0.0"
+    "react95": "^4.0.0",
+    "spring": "^0.0.0",
+    "styled-components": "^6.1.8",
+    "styled-jsx": "^5.1.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "concurrently": "^7.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
