--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react95/icons": "^2.1.1",
+    "animate.css": "^4.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "css-loader": "^6.10.0",
     "express": "^4.18.2",
@@ -20,7 +22,9 @@
     "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-dom-confetti": "^0.2.0",
     "react-draggable": "^4.4.6",
+    "react-moving-text": "^0.0.7",
     "react-spring": "^9.7.3",
     "react95": "^4.0.0",
     "spring": "^0.0.0",
