--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "css-loader": "^6.10.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "next": "^14.1.0",
