--- a/package.json
+++ b/package.json
@@ -20,31 +20,33 @@
     "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "css-loader": "^6.10.0",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "next": "^14.1.0",
-    "postcss-loader": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "postcss-loader": "^8.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dom-confetti": "^0.2.0",
     "react-draggable": "^4.4.6",
     "react-moving-text": "^0.0.7",
     "react-spring": "^9.7.3",
     "react95": "^4.0.0",
     "spring": "^0.0.0",
+    "style-loader": "^4.0.0",
     "styled-components": "^6.1.8",
-    "styled-jsx": "^5.1.2",
-    "url-loader": "^4.1.1"
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^7.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "file-loader": "^6.2.0",
     "next-transpile-modules": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.8",
+    "url-loader": "^4.1.1"
   }
 }
