--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mathjs": "^13.0.3",
     "mongoose": "^8.1.1",
     "next": "^14.2.5",
     "postcss-loader": "^8.1.1",
