--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    volumes:
+      - ".:/app"
 
   backend:
     build:
@@ -14,3 +16,4 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
+      
