--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react95/icons": "^2.1.1",
+    "@react95/icons": "2.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mathjs": "^13.0.3",
@@ -35,18 +34,19 @@
     "react-spring": "^9.7.3",
     "react95": "^4.0.0",
     "spring": "^0.0.0",
-    "style-loader": "^4.0.0",
     "styled-components": "^6.1.8",
     "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "concurrently": "^7.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "file-loader": "^6.2.0",
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.41",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.8",
     "url-loader": "^4.1.1"
   }
