--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    ports:
+      - "3001:3001"
+    env_file:
+      - .env
+    container_name: backend
+
   frontend:
     build:
       context: .
@@ -7,13 +17,4 @@ services:
       - "3000:3000"
     depends_on:
       - backend
-    volumes:
-      - ".:/app"
-
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-      
+    container_name: frontend
