--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "file-loader": "^6.2.0",
+    "ignore-loader": "^0.1.2",
     "next-transpile-modules": "^10.0.1",
+    "null-loader": "^4.0.1",
     "postcss": "^8.4.41",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.8",
